# classicalDFT

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Config.sh  Config_hydra.sh  Dockerfile  Makefile  README.md  buildlib.sh  ceci_modules  config.sh  dft_make.sh  dft_make_hydra.sh  load_ceci_modules.sh  setup_ceci_modules.sh
CreateCluster/: Droplet.h  Makefile  createCluster.cpp  local.mak
Docs/: Corrected_EOS.tex  FFT_Diffusion.tex  Trilinear.tex
Droplet/: CMakeLists.txt  Droplet.h  droplet.cpp  local.mak
GradientDescent/: Droplet.h  Makefile  droplet.cpp  droplet.d  local.mak
Homogeneous/: Makefile  droplet.cpp  get_thermo.cpp
HomogeneousFrozen/: Droplet.h  Makefile  frozen.cpp  local.mak
HydraScripts/: Submit.sh  hydra_Config.sh
Lib/: CMakeLists.txt
Lib/include/: DFT.h  DFT_LinAlg.h  DFT_LinAlg_ARMA.h  DFT_LinAlg_EIGEN.h  Density.h  FMT.h  FMT_FFTW.h  FMT_Weighted_Density.h  Interaction.h  Lattice.h  Log.h  Minimizer.h  Potential1.h  Species.h  StringMethod.h  Summation.h  VDW1.h  config.h  myColor.h
Lib/src/: DFT.cpp  DFT_Surfactant.cpp  Density.cpp  FMT.cpp  GitSHA1.cpp  Interaction.cpp  Minimizer.cpp  Species.cpp  VDW1.cpp  myColor.cpp  options.cpp  poly34.cpp
LiqVap/: CMakeLists.txt  EOS.cpp  EOS.h  LJ.h
ParticleCoords/: local.mak  particles.cpp
SS31-Mar-2016/: ss005.00012  ss021.00234  ss029.00438  ss035.00632  ss043.00948  ss049.01228  ss051.01328  ss061.01894  ss063.02018  ss065.02148  ss067.02280  ss069.02418  ss071.02558  ss073.02704  ss077.03006  ss079.03162  ss081.03324  ss085.03658  ss089.04008  ss093.04374  ss099.04952  ss107.05780  ss111.06218  ss123.07628  ss125.07878  ss129.08388  ss133.08914  ss135.09182  ss137.09456  ss141.10014  ss143.10298  ss147.10880  ss151.11478  ss155.12092  ss157.12406  ss159.12722  ss167.14030  ss169.14368  ss175.15402  ss177.15756  (+38 more)
Solid/: CMakeLists.txt  SolidFCC.h  ljsolidfcc.cpp  process_scans.cpp
Solid_Gaussian/: CMakeLists.txt  LiquidVapor.cpp  Solid.h  solid_gaussian.cpp
Solid_TWF/: Makefile  Solid.h  solid.cpp
String_Method/: Droplet.h  Makefile  (+2 more)
Wall_Interaction/: CMakeLists.txt  Makefile  Wall.h  dft_make.sh  local.mak  wall.cpp
dft_lib/: CMakeLists.txt
dft_lib/cmake/: FindDependencies.cmake
dft_lib/core/: CMakeLists.txt  classical_dft
dft_lib/core/dft_lib/exceptions/: grace_exception.h
dft_lib/core/dft_lib/geometry/: element.h  mesh.h  point.h  vertex.h
dft_lib/core/dft_lib/geometry/2D/: element.h  mesh.h
dft_lib/core/dft_lib/geometry/3D/: element.h  mesh.h
dft_lib/core/dft_lib/geometry/base/: element.h  mesh.h  vertex.h
dft_lib/core/dft_lib/graph/: grace.h
dft_lib/core/dft_lib/numerics/: arithmetic.h  integration.h
dft_lib/core/dft_lib/physics/potentials/intermolecular/: potential.h
dft_lib/core/dft_lib/utils/: config_parser.h  console.h  example.h  functions.h
dft_lib/core/src/exceptions/: grace_exceptions.cpp  parameter_exceptions.cpp
dft_lib/core/src/geometry/: element.cpp  mesh.cpp  vertex.cpp
dft_lib/core/src/geometry/2D/: element.cpp  mesh.cpp
dft_lib/core/src/geometry/3D/: element.cpp  mesh.cpp
dft_lib/core/src/geometry/base/: element.cpp  mesh.cpp  vertex.cpp
dft_lib/core/src/graph/: grace.cpp
dft_lib/core/src/numerics/: arithmetic.cpp
dft_lib/core/src/physics/potentials/intermolecular/: potential.cpp
dft_lib/core/src/utils/: example.cpp
dft_lib/docs/: setup-env.md
dft_lib/examples/config_parser/: README.md  main.cpp
dft_lib/examples/config_parser/config_files/: config.ini
dft_lib/examples/console/: CMakeLists.txt  README.md  main.cpp
dft_lib/examples/geometry/: README.md  main.cpp
dft_lib/examples/graphs/: CMakeLists.txt  README.md  main.cpp
dft_lib/examples/numerics/: CMakeLists.txt  README.md  main.cpp
dft_lib/examples/numerics/arithmetic/: CMakeLists.txt  README.md  main.cpp
dft_lib/examples/numerics/integration/: CMakeLists.txt  README.md  main.cpp
dft_lib/examples/physics/potentials/intermolecular/: README.md  main.cpp
dft_lib/tests/: CMakeLists.txt  main.cpp
dft_lib/tests/Utils/: example.cpp
dft_lib/tests/exceptions/: grace.cpp  parameter_exceptions.cpp
dft_lib/tests/geometry/: vertex.cpp
dft_lib/tests/geometry/2D/: element.cpp  mesh.cpp
dft_lib/tests/geometry/base/: vertex.cpp
dft_lib/tests/geometry/element/: element.cpp
dft_lib/tests/geometry/vertex/: vertex.cpp
dft_lib/tests/graph/: grace.cpp
dft_lib/tests/numerics/: arithmetic.cpp  integration.cpp
dft_lib/tests/physics/potentials/intermolecular/: potential.cpp
dft_lib/tests/utils/: config_parser.cpp  console.cpp  functions.cpp
legacy_lib/: CMakeLists.txt
legacy_lib/additionalCode/: DFT_Armadillo.cpp  DFT_Eigen.cpp  DFT_custom.cpp  Grace.cpp  Grace.h
legacy_lib/docs/: objects.tex
legacy_lib/examples/Droplet/: Droplet.h  droplet.cpp
legacy_lib/examples/HydraScripts/: hydra_config.sh  xRun.hydra
legacy_lib/examples/SS31-Mar-2016/: ss325.52978
legacy_lib/include/: Arnoldi.h  DFT.h  DFT_Factory.h  DFT_LinAlg.h  DFT_LinAlg_ARMA.h  DFT_LinAlg_EIGEN.h  Density.h  DimerMethod.h  Dynamical_Matrix.h  Eigenvalues.h  FMT.h  FMT.h.old  FMT_BACKUP_2131066.h  FMT_LOCAL_2131066.h  FMT_Weighted_Density.h  Fundamental_Measures.h  Gaussian.h  Gaussian_Density.h  Integrator.h  Interaction.h  Interaction.h.1  Interaction_Surfactant.h  Lattice.h  Log.h  Log_Det.h  Minimizer.h  Point.h  Potential1.h  Species.h  Summation.h  classicalDFT_serialize.h  options.h
legacy_lib/src/: Arnoldi.cpp  DDFT.cpp  DDFT_IF.cpp  DDFT_IF_Closed.cpp  DDFT_IF_Fixed_Border.cpp  DDFT_IF_Open.cpp  DDFT_IF_Periodic.cpp  DFT.cpp  DFT_Coex.cpp  Density.cpp  Dynamical_Matrix.cpp  EOS_Species.cpp  Eigenvalues.cpp  FMT.cpp  FMT_Gaussian_Species.cpp  FMT_Species.cpp  FMT_Species_Surf.cpp  Gaussian.cpp  Gaussian_Density.cpp  GitSHA1.cpp  Interaction.cpp  Log_Det.cpp  Minimizer.cpp  Species.cpp  Species_Analytic_2.cpp  options.cpp  visit_writer.cpp
mduran/dft_lib_refact/examples/config_parser/: CMakeLists.txt
mduran/dft_lib_refact/examples/config_parser/config_files/: config.json  config.xml
mduran/dft_lib_refact/examples/geometry/: CMakeLists.txt
(+237 files in other folders)
